App/kubernetes/service.yaml
# App
apiVersion: v1
kind: Service
metadata:
  namespace: myapp
  name: app-service
spec:
  ports:
    - name: app-port
      port: 80
  selector:
    app: myapp
---

apiVersion: v1
kind: Service
metadata:
  name: app-postgress-service
spec:
  type: NodePort
  ports:
    - name: myapp-postgress-port
      port: 5432
  selector:
    app: myapp-psql
---
